--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ rvm:
   - 2.5.3
   - 2.6.5
 before_install: gem install bundler -v 2.0.2
+install: bundle install
 script: rspec spec --format documentation --order random
