--- a/spec/fixtures/vcr_cassettes/default.yml
+++ b/spec/fixtures/vcr_cassettes/default.yml
@@ -349,4 +349,144 @@ http_interactions:
         }
     http_version: 
   recorded_at: Thu, 20 Feb 2020 13:59:00 GMT
+- request:
+    method: get
+    uri: http://localhost:6301/clusters/.test/groups
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/vnd.api+json
+      Content-Type:
+      - application/vnd.api+json
+      Authorization:
+      - "[REDACTED]"
+      User-Agent:
+      - Faraday v0.17.3
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/vnd.api+json
+      Content-Length:
+      - '2848'
+    body:
+      encoding: UTF-8
+      string: |-
+        {
+          "data": [
+            {
+              "type": "groups",
+              "id": "5e4e6bf1e138231a166e491c",
+              "attributes": {
+                "name": "empty",
+                "priority": 100,
+                "params": {
+                }
+              },
+              "links": {
+                "self": "/groups/5e4e6bf1e138231a166e491c"
+              },
+              "relationships": {
+                "cluster": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491c/relationships/cluster",
+                    "related": "/groups/5e4e6bf1e138231a166e491c/cluster"
+                  }
+                },
+                "nodes": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491c/relationships/nodes",
+                    "related": "/groups/5e4e6bf1e138231a166e491c/nodes"
+                  }
+                },
+                "cascades": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491c/relationships/cascades",
+                    "related": "/groups/5e4e6bf1e138231a166e491c/cascades"
+                  }
+                }
+              }
+            },
+            {
+              "type": "groups",
+              "id": "5e4e6bf1e138231a166e491d",
+              "attributes": {
+                "name": "singles",
+                "priority": 200,
+                "params": {
+                }
+              },
+              "links": {
+                "self": "/groups/5e4e6bf1e138231a166e491d"
+              },
+              "relationships": {
+                "cluster": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491d/relationships/cluster",
+                    "related": "/groups/5e4e6bf1e138231a166e491d/cluster"
+                  }
+                },
+                "nodes": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491d/relationships/nodes",
+                    "related": "/groups/5e4e6bf1e138231a166e491d/nodes"
+                  }
+                },
+                "cascades": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491d/relationships/cascades",
+                    "related": "/groups/5e4e6bf1e138231a166e491d/cascades"
+                  }
+                }
+              }
+            },
+            {
+              "type": "groups",
+              "id": "5e4e6bf1e138231a166e491e",
+              "attributes": {
+                "name": "doubles",
+                "priority": 300,
+                "params": {
+                }
+              },
+              "links": {
+                "self": "/groups/5e4e6bf1e138231a166e491e"
+              },
+              "relationships": {
+                "cluster": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491e/relationships/cluster",
+                    "related": "/groups/5e4e6bf1e138231a166e491e/cluster"
+                  }
+                },
+                "nodes": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491e/relationships/nodes",
+                    "related": "/groups/5e4e6bf1e138231a166e491e/nodes"
+                  }
+                },
+                "cascades": {
+                  "links": {
+                    "self": "/groups/5e4e6bf1e138231a166e491e/relationships/cascades",
+                    "related": "/groups/5e4e6bf1e138231a166e491e/cascades"
+                  }
+                }
+              }
+            }
+          ],
+          "jsonapi": {
+            "version": "1.0"
+          },
+          "included": [
+
+          ]
+        }
+    http_version: 
+  recorded_at: Thu, 20 Feb 2020 14:02:03 GMT
 recorded_with: VCR 5.0.0
