--- a/spec/fixtures/vcr_cassettes/default.yml
+++ b/spec/fixtures/vcr_cassettes/default.yml
@@ -489,4 +489,76 @@ http_interactions:
         }
     http_version: 
   recorded_at: Thu, 20 Feb 2020 14:02:03 GMT
+- request:
+    method: get
+    uri: http://localhost:6301/groups/test.empty
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/vnd.api+json
+      Content-Type:
+      - application/vnd.api+json
+      Authorization:
+      - "[REDACTED]"
+      User-Agent:
+      - Faraday v0.17.3
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/vnd.api+json
+      Content-Length:
+      - '928'
+    body:
+      encoding: UTF-8
+      string: |-
+        {
+          "data": {
+            "type": "groups",
+            "id": "5e4e6bf1e138231a166e491c",
+            "attributes": {
+              "name": "empty",
+              "priority": 100,
+              "params": {
+              }
+            },
+            "links": {
+              "self": "/groups/5e4e6bf1e138231a166e491c"
+            },
+            "relationships": {
+              "cluster": {
+                "links": {
+                  "self": "/groups/5e4e6bf1e138231a166e491c/relationships/cluster",
+                  "related": "/groups/5e4e6bf1e138231a166e491c/cluster"
+                }
+              },
+              "nodes": {
+                "links": {
+                  "self": "/groups/5e4e6bf1e138231a166e491c/relationships/nodes",
+                  "related": "/groups/5e4e6bf1e138231a166e491c/nodes"
+                }
+              },
+              "cascades": {
+                "links": {
+                  "self": "/groups/5e4e6bf1e138231a166e491c/relationships/cascades",
+                  "related": "/groups/5e4e6bf1e138231a166e491c/cascades"
+                }
+              }
+            }
+          },
+          "jsonapi": {
+            "version": "1.0"
+          },
+          "included": [
+
+          ]
+        }
+    http_version: 
+  recorded_at: Thu, 20 Feb 2020 14:11:08 GMT
 recorded_with: VCR 5.0.0
